[tool.poetry]
name = "business_days"
version = "0.1.0"
description = ""
authors = ["Evan Baird <mrcartoonster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
flask = "^1.1.2"
environs = "^9.2.0"
flask-wtf = "^0.14.3"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-clarity = "^0.3.0-alpha.0"
pytest-randomly = "^3.5.0"
pytest-cov = "^2.10.1"
pre-commit = "^2.9.3"
ipython = "^7.19.0"
prettyprinter = "^0.18.0"
rich = "^9.5.1"
typer = "^0.3.2"
interrogate = "^1.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
